--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -68,7 +68,7 @@
                 </div>
                 
                 <main></main>
-                <div id="spin">BAM VAO DAY DE NHAN QUA</div>
+                <div id="spin" onclick="showMessage()">Nhận quà</div>
                 <div>
                     <audio id="playe" autoplay controls loop>
                         <source src="./music.mp3" type="audio/mp3">
@@ -87,8 +87,8 @@
             }
             function showMessage() {
                 swal({
-                    title: "Chuc Mung Sinh Nhat Bich Ngoc", // Tiêu đề của popup
-                    text: "Chuc em sinh nhat vui ve, luon xinh tuoi, khoe manh, hanh phuc, gap nhieu may man va thanh cong trong tuoi moi!",
+                    title: "Chúc Mừng Sinh Nhật Bích Ngọc", // Tiêu đề của popup
+                    text: "Chúc em sinh nhật vui vẻ, luôn xinh tươi, khoẻ mạnh, hạnh phúc, gặp nhiều may mắn và thành công trong tuổi mới nhé!",
                     button: {
                         text: "❤️️",
                     },
