--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -88,7 +88,15 @@
             function showMessage() {
                 swal({
                     title: "Chúc Mừng Sinh Nhật Bích Ngọc", // Tiêu đề của popup
-                    text: "Chúc em sinh nhật vui vẻ, luôn xinh tươi, khoẻ mạnh, hạnh phúc, gặp nhiều may mắn và thành công trong tuổi mới nhé!",
+                    text: "Chúc em sinh nhật vui vẻ, luôn xinh tươi, khoẻ mạnh, hạnh phúc, gặp nhiều may mắn và thành công trong tuổi mới nhé!<br>
+                    Đây là những món quà mà anh Long muốn dành tặng riêng cho em 😜<br>
+                    Luật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau thì sẽ được món quà đó 😅 <br>
+                    Sẽ có 5 món quà<br>
+                    1) Trà sữa full topping<br>
+                    2) 1 bó hoa tươi thắm<br>
+                    3) Vé xem phim đặc sắc<br>
+                    4) Thú nhồi bông hình con hổ đáng yêu<br>
+                    5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản (Không bị bỏ rơi)",
                     button: {
                         text: "❤️️",
                     },
