--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -64,11 +64,11 @@
                 
                 <div class="avata">
                     <img src="MyAvatar.jpg" alt="" class="avata__img" onclick="showMessage()" />
-                    <h1 onclick="showMessage()" class="avata__title">Bích Ngọc</h1>
+                    <h1 onclick="showMessage1()" class="avata__title">Bích Ngọc</h1>
                 </div>
                 
                 <main></main>
-                <div id="spin" onclick="showMessage()">Nhận quà</div>
+                <div id="spin" onclick="showMessage2()">Nhận quà</div>
                 <div>
                     <audio id="playe" autoplay controls loop>
                         <source src="./music.mp3" type="audio/mp3">
@@ -85,18 +85,19 @@
             if (document.location.search.match(/type=embed/gi)) {
                 window.parent.postMessage("resize", "*");
             }
-            function showMessage() {
+            function showMessage1() {
                 swal({
                     title: "Chúc Mừng Sinh Nhật Bích Ngọc", // Tiêu đề của popup
-                    text: "Chúc em sinh nhật vui vẻ, luôn xinh tươi, khoẻ mạnh, hạnh phúc, gặp nhiều may mắn và thành công trong tuổi mới nhé!<br>
-                    Đây là những món quà mà anh Long muốn dành tặng riêng cho em 😜<br>
-                    Luật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau thì sẽ được món quà đó 😅 <br>
-                    Sẽ có 5 món quà<br>
-                    1) Trà sữa full topping<br>
-                    2) 1 bó hoa tươi thắm<br>
-                    3) Vé xem phim đặc sắc<br>
-                    4) Thú nhồi bông hình con hổ đáng yêu<br>
-                    5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản (Không bị bỏ rơi)",
+                    text: "Chúc em sinh nhật vui vẻ, luôn xinh tươi, khoẻ mạnh, hạnh phúc, gặp nhiều may mắn và thành công trong tuổi mới nhé!",
+                    button: {
+                        text: "❤️️",
+                    },
+                });
+            }
+            function showMessage2() {
+                swal({
+                    title: "Phổ biến luật chơi", // Tiêu đề của popup
+                    text: "Đây là những món quà mà anh Long muốn dành tặng riêng cho em 😜\nLuật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau thì sẽ được món quà đó 😅 \n Sẽ có 5 món quà \n1) Trà sữa full topping\n2) 1 bó hoa tươi thắm \n 3) Vé xem phim đặc sắc \n 4) Thú nhồi bông hình con hổ đáng yêu \n 5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản (Không bị bỏ rơi)\n Chuc em may man nhe!",
                     button: {
                         text: "❤️️",
                     },
