--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -63,14 +63,14 @@
 
                 
                 <div class="avata">
-                    <img src="MyAvatar.jpg" alt="" class="avata__img" onclick="showMessage()" />
+                    <img src="MyAvatar.jpg" alt="" class="avata__img" onclick="showMessage1()" />
                     <h1 onclick="showMessage1()" class="avata__title">Bích Ngọc</h1>
                 </div>
                 
                 <main></main>
                 <div id="spin" onclick="showMessage2()">Nhận quà</div>
                 <div>
-                    <audio id="playe" autoplay controls loop>
+                    <audio id="playe" autoplay controls loop style="width:250px">
                         <source src="./music.mp3" type="audio/mp3">
                     </audio>
                 </div>
@@ -97,7 +97,7 @@
             function showMessage2() {
                 swal({
                     title: "Phổ biến luật chơi", // Tiêu đề của popup
-                    text: "Đây là những món quà mà anh Long muốn dành tặng riêng cho em 😜\nLuật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau thì sẽ được món quà đó 😅 \n Sẽ có 5 món quà \n1) Trà sữa full topping\n2) 1 bó hoa tươi thắm \n 3) Vé xem phim đặc sắc \n 4) Thú nhồi bông hình con hổ đáng yêu \n 5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản (Không bị bỏ rơi)\n Chuc em may man nhe!",
+                    text: "Đây là những món quà mà anh Long muốn dành tặng riêng cho em 😜\nLuật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau thì sẽ được món quà đó 😅 \n Sẽ có 5 món quà \n1) Trà sữa full topping\n2) 1 bó hoa tươi thắm \n 3) Vé xem phim đặc sắc \n 4) Thú nhồi bông hình con hổ đáng yêu \n 5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản (Không bị bỏ rơi)😜😜😜\n Chuc em may man nhe!",
                     button: {
                         text: "❤️️",
                     },
