--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -87,7 +87,7 @@
             }
             function showMessage1() {
                 swal({
-                    title: "Chúc Mừng Sinh Nhật Bích Ngọc", // Tiêu đề của popup
+                    title: "Chúc Mừng Sinh Nhật", // Tiêu đề của popup  Bích Ngọc
                     text: "Chúc em sinh nhật vui vẻ, luôn xinh tươi, khoẻ mạnh, hạnh phúc, gặp nhiều may mắn và thành công trong tuổi mới nhé!",
                     button: {
                         text: "❤️️",
@@ -96,8 +96,8 @@
             }
             function showMessage2() {
                 swal({
-                    title: "Phổ biến luật chơi", // Tiêu đề của popup
-                    text: "Đây là những món quà mà anh Long muốn dành tặng riêng cho em 😜\nLuật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau thì sẽ được món quà đó 😅 \n Sẽ có 5 món quà \n1) Trà sữa full topping\n2) 1 bó hoa tươi thắm \n 3) Vé xem phim đặc sắc \n 4) Thú nhồi bông hình con hổ đáng yêu \n 5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản (Không bị bỏ rơi)😜😜😜\n Chuc em may man nhe!",
+                    title: "Phổ biến luật chơi", // Tiêu đề của popup Đây là những món quà mà anh Long muốn dành tặng riêng cho em 😜\n (Không bị bỏ rơi)
+                    text: "Luật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau thì sẽ được món quà đó 😅 \n Sẽ có 5 món quà \n1) Trà sữa full topping\n2) 1 bó hoa tươi thắm \n 3) Vé xem phim đặc sắc \n 4) Thú nhồi bông hình con hổ đáng yêu \n 5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản 😜😜😜\n Good luck for you!",
                     button: {
                         text: "❤️️",
                     },
