--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -63,8 +63,8 @@
 
                 
                 <div class="avata">
-                    <img src="MyAvatar.jpg" alt="" class="avata__img" onclick="showMessage1()" />
-                    <h1 onclick="showMessage1()" class="avata__title">Bích Ngọc <br> 誕生日おめでとう❣</h1>
+                    <img src="tiger" alt="" class="avata__img" onclick="showMessage1()" />
+                    <h1 onclick="showMessage1()" class="avata__title">NAME <br> 誕生日おめでとう❣</h1>
                 </div>
                 
                 <main></main>
