--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -63,7 +63,7 @@
 
                 
                 <div class="avata">
-                    <img src="tiger" alt="" class="avata__img" onclick="showMessage1()" />
+                    <img src="tiger.png" alt="" class="avata__img" onclick="showMessage1()" />
                     <h1 onclick="showMessage1()" class="avata__title">NAME <br> 誕生日おめでとう❣</h1>
                 </div>
                 
