--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -29,7 +29,6 @@
         ></script>
         <meta content="clickberry-extension-here" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/css/modaal.min.css">
-        <link rel="stylesheet" type="text/css" href="css/9-6-2.css">
     </head>
 
     <body>
@@ -68,13 +67,14 @@
                     </audio>
                 </div>
                 <div>
-                    <img onclick="showMessage1()" src="MyAvatar5.jpg" class="image5"/><br/>
+                    <img onclick="showMessage1()" src="Myavatar5.jpg" class="image5"/><br/>
                     <h>
                         <a href="video.mp4" class="video-open">❤️️❤️️❤️️Message❤️️❤️️❤️️</a>
                     </h>
                 </div>  
             </div>
         </div>
+       
 
         <script>
             if (document.location.search.match(/type=embed/gi)) {
@@ -111,9 +111,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/js/modaal.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
         <!--自作のJS-->
-        <script src="js/9-6-2.js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="main.js"></script>
+   
    
     </body>
 </html>
