--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -67,7 +67,7 @@
                     </audio>
                 </div>
                 <div>
-                    <img onclick="showMessage1()" src="Myvatar5.jpg" class="image5"/><br/>
+                    <img onclick="showMessage1()" src="MyAvatar5.jpg" class="image5"/><br/>
                     <h>
                         <a href="video.mp4" class="video-open">❤️️❤️️❤️️Message❤️️❤️️❤️️</a>
                     </h>
