--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -69,7 +69,7 @@
                 <div>
                     <img onclick="showMessage1()" src="MyAvatar5.jpg" class="image5"/><br/>
                     <h>
-                        <a href="video.mp4" class="video-open">❤️️❤️️❤️️Message❤️️❤️️❤️️</a>
+                        <a href="https://www.youtube.com/embed/S2CWnJp5zF0" class="video-open">❤️️❤️️❤️️Message❤️️❤️️❤️️</a>
                     </h>
                 </div>  
             </div>
