--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -12,7 +12,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport">
         <link rel="shortcut icon" type="image/png" href="birthdayCake.png"/>
-        <title>Happy Birthday</title>
+        <title>Happy Birthday Bích Ngọc</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./gamestyles.css">
         <script>
