--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -41,19 +41,19 @@
             <div class="after"></div>
             <div class="container">
                 <div class="balloon">
-                    <div><span>H</span></div>
-                    <div><span>A</span></div>
-                    <div><span>P</span></div>
-                    <div><span>P</span></div>
-                    <div><span>Y</span></div>
-                    <div><span>B</span></div>
-                    <div><span>I</span></div>
-                    <div><span>R</span></div>
-                    <div><span>T</span></div>
-                    <div><span>H</span></div>
-                    <div><span>D</span></div>
-                    <div><span>A</span></div>
-                    <div><span>Y</span></div>
+                    <div><span onclick="H1()" style="cursor:pointer">H</span></div>
+                    <div><span onclick="A1()" style="cursor:pointer">A</span></div>
+                    <div><span onclick="P1()" style="cursor:pointer">P</span></div>
+                    <div><span onclick="P2()" style="cursor:pointer">P</span></div>
+                    <div><span onclick="Y1()" style="cursor:pointer">Y</span></div>
+                    <div><span onclick="B()" style="cursor:pointer">B</span></div>
+                    <div><span onclick="I()" style="cursor:pointer">I</span></div>
+                    <div><span onclick="R()" style="cursor:pointer">R</span></div>
+                    <div><span onclick="T()" style="cursor:pointer">T</span></div>
+                    <div><span onclick="H2()" style="cursor:pointer">H</span></div>
+                    <div><span onclick="D()" style="cursor:pointer">D</span></div>
+                    <div><span onclick="A2()" style="cursor:pointer">A</span></div>
+                    <div><span onclick="Y2()" style="cursor:pointer">Y</span></div>
                 </div>                
                 <div class="avata">
                     <img src="MyAvatar.jpg" alt="" class="avata__img" onclick="showMessage1()" />
