--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -97,7 +97,7 @@
                 audio.play();             
                 swal({
                     title: "Đây là những món quà 🎁🎁 mà anh Long muốn dành tặng riêng cho em 😜", // Tiêu đề của popup
-                    text: "Luật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau, rồi chụp màn hình lại gửi cho anh Long thì sẽ được món quà đó 😅 \n Sẽ có 5 món quà \n1) Trà sữa trân châu full topping 🧋🧋🧋\n2) 1 bó hoa tươi thắm 🌹🌹🌹\n 3) Vé xem phim đặc sắc 🎫🎫🎫\n 4) Thú nhồi bông hình con hổ đáng yêu 🐯🐯🐯 \n 5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản 🇯🇵 🛫 🇯🇵 (Không bị bỏ rơi)😜😜😜\n Chúc em may mắn nhé!🥳🥳🥳\n Good luck for you! 🤎🤎🤎",
+                    text: "Luật chơi rất đơn giản, chỉ cần chọn được 3 hình quà tặng giống nhau, rồi chụp màn hình lại gửi cho anh Long thì sẽ được món quà đó 😅 \n Sẽ có 5 món quà \n1) Trà sữa trân châu full topping 🧋🧋🧋\n2) 1 bó hoa tươi thắm 🌹🌹🌹\n 3) Vé xem phim đặc sắc 🎫🎫🎫\n 4) Thú nhồi bông hình con hổ đáng yêu 🐯🐯🐯 \n 5) [Đặc biệt] 1 chuyến đi du lịch Nhật Bản 🇯🇵 🛫 🇯🇵 (Không bị bỏ rơi)😜😜😜\n Chúc em may mắn nhé!🥳🥳🥳🤎🤎🤎",
                     button: {
                         text: "❤️️",
                     },
