--- a/MyBirthday.html
+++ b/MyBirthday.html
@@ -12,7 +12,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport">
         <link rel="shortcut icon" type="image/png" href="birthdayCake.png"/>
-        <title>Happy Birthday Bích Ngọc</title>
+        <title>Happy Birthday Name</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./gamestyles.css">
         <script>
@@ -57,7 +57,7 @@
                 </div>                
                 <div class="avata">
                     <img src="MyAvatar.jpg" alt="" class="avata__img" onclick="showMessage1()" />
-                    <h1 onclick="showMessage1()" class="avata__title">Bích Ngọc <br> 誕生日おめでとう❣</h1>
+                    <h1 onclick="showMessage1()" class="avata__title">Name <br> 誕生日おめでとう❣</h1>
                 </div>                
                 <main></main>
                 <div id="spin" onclick="showMessage2()">Nhận quà</div>
@@ -84,7 +84,7 @@
                 var audio = document.getElementById("playe");
                 audio.play();
                 swal({
-                    title: "Chúc Mừng Sinh Nhật Bích Ngọc", // Tiêu đề của popup
+                    title: "Chúc Mừng Sinh Nhật Name", // Tiêu đề của popup
                     text: "Chúc em sinh nhật vui vẻ, luôn xinh tươi, khoẻ mạnh, hạnh phúc, gặp nhiều may mắn và thành công trong tuổi mới nhé!",
                     button: {
                         text: "❤️️",
